--- a/spring-poc/build.gradle
+++ b/spring-poc/build.gradle
@@ -14,6 +14,7 @@ plugins {
 }
 
 apply plugin: 'spring-cloud-contract'
+apply plugin: 'java' 
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -45,6 +46,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'
 	testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-verifier'
+	testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
+	testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
+    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
+   
+ 
+    testRuntime("org.junit.platform:junit-platform-runner:1.5.2")
 }
 
 dependencyManagement {
@@ -62,10 +69,10 @@ contractTest {
 }
 
 test {
-	useJUnitPlatform()
-	useJUnit {
-        includeCategories 'com.example.demo.unittests.UnitTest'
-    }
+	useJUnitPlatform{
+	includeTags 'student'
+	}
+	
     testLogging {
         showStandardStreams = true
     }
