--- a/spring-poc/build.gradle
+++ b/spring-poc/build.gradle
@@ -50,6 +50,8 @@ dependencies {
 	testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
 	testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
+    
+    testCompile "com.github.tomakehurst:wiremock-jre8:2.27.2"
    
  
     testRuntime("org.junit.platform:junit-platform-runner:1.5.2")
