added integration test

--- a/spring-poc/src/main/resources/application.properties
+++ b/spring-poc/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/mkrai
 spring.datasource.username=mkrai
 spring.datasource.password=mkrai
-port=8085
+server.port=8085
