--- a/spring-poc/build.gradle
+++ b/spring-poc/build.gradle
@@ -40,10 +40,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.5.0'
+	
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
+	
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'
 	testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-verifier'
@@ -51,7 +55,12 @@ dependencies {
 	testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
     
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+    
+   
+    
     testCompile "com.github.tomakehurst:wiremock-jre8:2.27.2"
+   
    
  
     testRuntime("org.junit.platform:junit-platform-runner:1.5.2")
@@ -71,7 +80,17 @@ contractTest {
 	useJUnitPlatform()
 }
 
-test {
+task integTest(type: Test) {
+	useJUnitPlatform{
+	includeTags 'integ'
+	}
+	
+	doLast{  
+        println "Welcome to Javatpoint. It is a Custom task Example.";  
+    }  
+}
+
+ task unitTest(type: Test) {
 	useJUnitPlatform{
 	includeTags 'student'
 	}
